--- a/index.html
+++ b/index.html
@@ -15,8 +15,38 @@
             <li><a href = "#"> Contato </a></li>
           </ul>
         </nav>
-        <h1 class="site-title"> Guilherme Ballardin Duso </h1>
-        <h2 class="site-subtitle"> web developer </h2>  
+
+        <div>
+          <h1 class="site-title"> Guilherme Ballardin Duso </h1>
+          <h2 class="site-subtitle"> web developer </h2>            
+        </div>   
       </header>
+
+      
+      <footer class="rodape-prin">
+        <span>&copy; Guilherme Ballardin Duso 2020</span>  
+            <ul class="icones-sociais">
+                <li><a href="https://www.linkedin.com/in/guilherme-ballardin-duso" target="_blank"><img src="./Icones/linkedin.png" alt="Icone do Linkedin"></a></li>
+                <li><a href="https://github.com/gbduso" target="_blank"><img src="./Icones/github.png" alt="Icone do GitHub"></a></li>
+            </ul>            
+      </footer>
+        
+<!--
+      <section>
+        <h2>Portifólio</h2>
+        <figure>
+          <img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
+          <figcaption>eCommerce</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt="eCommerce">
+          <figcaption>eCommerce</figcaption>
+        </figure>
+        <figure>
+          <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="eCommerce">
+          <figcaption>eCommerce</figcaption>
+        </figure>
+      </section>
+      -->
 </body>
 </html>
