--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guilherme Ballardin Duso</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto:wght@100&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Guilherme Ballardin Duso</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Roboto:wght@100&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/cc370b6cfe.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -70,16 +71,16 @@
 
   <section id="contato" class="contato">
     <h2>Contato</h2>
-    <div class="grid">      
-      <figure>
-        <img class="img-portfolio" src="./img/github.png" alt="github">
-      </figure> 
-      <figure>
-        <img class="img-portfolio" src="./img/linkedin.png" alt="linkedin">
-      </figure> 
-      <figure>
-        <img class="img-portfolio" src="./img/mail.png" alt="mail">
-      </figure>      
+    <div class="grid icons">
+      <a target="_blank" href="https://github.com.gbduso">
+        <i class="fab fa-github"></i>    
+      </a> 
+      <a target="_blank" href="https://www.linkedin.com/in/guilherme-ballardin-duso">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a target="_blank" href="mailto:guilherme.duso@gmail.com">
+        <i class="fas fa-envelope"></i>   
+      </a>         
     </div>
   </section>
 
