--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <figure>
         <img class="img-sobre" src="./img/dino.jpg" alt="Sobre">      
       </figure>   
-      <h2>Oi eu sou  Goku!</h2>
+      <h2>Oi eu sou  Goku! </h2>
     </div>
   </section>
 
@@ -52,19 +52,27 @@
     <div class="grid">
       <figure>
         <img class="img-portfolio" src="./img/ROB.PNG" alt="Rob">
-        <figcaption>Robozinho</figcaption>
+        <figcaption>Educational Robotics</figcaption>
       </figure>
       <figure>
         <img class="img-portfolio" src="./img/mp95.jpg" alt="Onibus">
-        <figcaption>Ônibus</figcaption>
+        <figcaption>Control and Automation Engineer</figcaption>
       </figure>
       <figure>
         <img class="img-portfolio" src="./img/Dudu.jpg" alt="Dudu">
-        <figcaption>Dudu</figcaption>
+        <figcaption>Dudu's friend</figcaption>
       </figure>
       <figure>
         <img class="img-portfolio" src="./img/Pizza.jpg" alt="Pizza">
-        <figcaption>Pizza</figcaption>
+        <figcaption>Pizza Eater and Maker</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/bass.jpg" alt="Pizza">
+        <figcaption>Lazy Bass Player</figcaption>
+      </figure>
+      <figure>
+        <img class="img-portfolio" src="./img/css.png" alt="Pizza">
+        <figcaption>Hobbyist Programmer</figcaption>
       </figure>
     </div>
   </section>
