--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
     <h2>Projetos</h2>
     <div class="grid">
       <figure>
-        <img class="img-portfolio" src="./img/ROB.PNG" alt="Rob">
+        <img class="img-portfolio" src="./img/ROB.PNG" alt="Robot">
         <figcaption>Educational Robotics</figcaption>
       </figure>
       <figure>
-        <img class="img-portfolio" src="./img/mp95.jpg" alt="Onibus">
+        <img class="img-portfolio" src="./img/mp95.jpg" alt="Ônibus">
         <figcaption>Control and Automation Engineer</figcaption>
       </figure>
       <figure>
@@ -67,11 +67,11 @@
         <figcaption>Pizza Eater and Maker</figcaption>
       </figure>
       <figure>
-        <img class="img-portfolio" src="./img/bass.jpg" alt="Pizza">
+        <img class="img-portfolio" src="./img/bass.jpg" alt="Bass">
         <figcaption>Lazy Bass Player</figcaption>
       </figure>
       <figure>
-        <img class="img-portfolio" src="./img/css.png" alt="Pizza">
+        <img class="img-portfolio" src="./img/css.PNG" alt="CSS">
         <figcaption>Hobbyist Programmer</figcaption>
       </figure>
     </div>
